@@ -1,3 +1,33 @@
+/*****************************************************************************
+Copyright (C)  2016  Brecht Sanders  All Rights Reserved
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in
+all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+THE SOFTWARE.
+*****************************************************************************/
+
+/**
+ * @file example_xlsxio_write.c
+ * @brief XLSX I/O example illustrating how to write to an .xlsx file.
+ * @author Brecht Sanders
+ *
+ * This example writes column headers and cells of different types to an .xslx file.
+ */
+
 #include <stdlib.h>
 #include <stdio.h>
 #include <unistd.h>
@@ -8,25 +38,23 @@ const char* filename = "example.xlsx";
 int main (int argc, char* argv[])
 {
   xlsxiowriter handle;
-  //remove the destination file first if it exists
-  unlink(filename);
-  //open .xlsx file for writing
+  //open .xlsx file for writing (will overwrite if it already exists)
   if ((handle = xlsxiowrite_open(filename, "MySheet")) == NULL) {
     fprintf(stderr, "Error creating .xlsx file\n");
     return 1;
   }
   //set row height
-  //xlsxiowrite_set_row_height(handle, 1);
+  xlsxiowrite_set_row_height(handle, 1);
   //how many rows to buffer to detect column widths
   xlsxiowrite_set_detection_rows(handle, 10);
   //write column names
-  xlsxiowrite_add_column(handle, "Col1", 0*4);
-  xlsxiowrite_add_column(handle, "Col2", 0*21);
-  xlsxiowrite_add_column(handle, "Col3", 0*12);
-  xlsxiowrite_add_column(handle, "Col4", 0*2);
-  xlsxiowrite_add_column(handle, "Col5", 0*4);
-  xlsxiowrite_add_column(handle, "Col6", 0*16);
-  xlsxiowrite_add_column(handle, "Col7", 0*10);
+  xlsxiowrite_add_column(handle, "Col1", 0);
+  xlsxiowrite_add_column(handle, "Col2", 21);
+  xlsxiowrite_add_column(handle, "Col3", 0);
+  xlsxiowrite_add_column(handle, "Col4", 2);
+  xlsxiowrite_add_column(handle, "Col5", 0);
+  xlsxiowrite_add_column(handle, "Col6", 0);
+  xlsxiowrite_add_column(handle, "Col7", 0);
   xlsxiowrite_next_row(handle);
   //write data
   int i;
