@@ -27,6 +27,8 @@ THE SOFTWARE.
  *
  * Only use this header file when version information is needed at compile
  * time. Otherwise the version functions in the libraries should be used.
+ * \sa     XLSXIO_VERSION_*
+ * \sa     XLSXIO_VERSION_STRING
  * \sa     xlsxioread_get_version()
  * \sa     xlsxioread_get_version_string()
  * \sa     xlsxiowrite_get_version()
@@ -59,13 +61,13 @@ THE SOFTWARE.
 #define XLSXIO_VERSION_STRING XLSXIO_VERSION_STRINGIZE(XLSXIO_VERSION_MAJOR, XLSXIO_VERSION_MINOR, XLSXIO_VERSION_MICRO)
 
 /*! \brief string with name of XLSX I/O reading library */
-#define XLSXIO_READ_NAME "libxlsxio_read "
+#define XLSXIOREAD_NAME "libxlsxio_read "
 /*! \brief string with name of XLSX I/O writing library */
-#define XLSXIO_WRITE_NAME "libxlsxio_write"
+#define XLSXIOWRITE_NAME "libxlsxio_write"
 
 /*! \brief string with name and version of XLSX I/O reading library \hideinitializer */
-#define XLSXIO_READ_FULLNAME (XLSXIO_READ_NAME " " XLSXIO_VERSION_STRING)
+#define XLSXIOREAD_FULLNAME (XLSXIOREAD_NAME " " XLSXIO_VERSION_STRING)
 /*! \brief string with name and version of XLSX I/O writing library \hideinitializer */
-#define XLSXIO_WRITE_FULLNAME (XLSXIO_WRITE_NAME " " XLSXIO_VERSION_STRING)
+#define XLSXIOWRITE_FULLNAME (XLSXIOWRITE_NAME " " XLSXIO_VERSION_STRING)
 
 #endif
